test/expected/declare_yo_exclam_k_b.out
struct S; declare ! as final operator (S) returning bool
         ^
10: error: member operator ! must have exactly 0 parameters
